--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "https://esanchezz74.github.io/react-website-test",
-  "name": "react-website-test",
+  "homepage": "https://esanchezz74.github.io/music-collection-app",
+  "name": "music-collection-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
